flowc/tests/fixtures/check_e128_unknown_variant.expected.err
tests/fixtures/check_e128_unknown_variant.flow:5:3: error[E128]: unknown variant or type 'Bogus'
