flowc/tests/fixtures/check_e128_unknown_variant.flow
type Hypothesis =
  | DeployCaused { id: string }

flow propose(string) -> Hypothesis {
  Bogus { id: it }
}
